--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,19 +3,20 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "LD2410_vjsyong"
-version = "1.0.0"
+name = "LD2410"
+version = "1.0.5"
 authors = [
   { name="Vi Jun Sean Yong", email="vjsyong@connect.ust.hk" },
 ]
 description = "A python interface for the HiLink LD2410 presence detection module"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.8"
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
+install_requires=['pyserial']
 
 [project.urls]
 "Homepage" = "https://github.com/vjsyong/LD2410"
